# Graph-Loom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.rc  build.rs
WindowsInstaller/: convert-icon.sh  graph-loom-setup.iss
assets/: AppSet.icns
examples/python_client/: README.md  client.py
proto/: graph_loom.proto
src/: lib.rs  main.rs
src/api/: grpc.rs  mod.rs  server.rs
src/gql/: cypher_spec.rs  mod.rs  query_interface.rs
src/graph_utils/: graph.rs
src/gui/: egui_frontend.rs  frontend.rs  mod.rs  win_utils.rs
src/persistence/: mod.rs  persist.rs  settings.rs
src/server/: mod.rs
tests/: unittests.rs
