[package]
name = "graph_loom"
version = "0.1.0"
edition = "2024"


authors = ["Jack Sims jack.m.sims@protonmail.com"]
license = "Apache-2.0"
description = "Interactive Graph Structure Utility"
readme = "README.md"
homepage = "https://github.com/jackpots28/Graph-Loom"
repository = "https://github.com/jackpots28/Graph-Loom"
keywords = ["graph", "visualization", "gui", "egui", "cypher"]
categories = ["gui", "visualization", "data-structures", "development-tools"]

[dependencies]
# GUI
eframe = "0.33.3"
egui = "0.33.3"

# Utils
env_logger = { version = "0.11.8", default-features = false }
uuid = { version = "1", features = ["v7", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.12.0"
time = { version = "0.3", features = ["formatting", "macros"] }
anyhow = "1"
serde_json = "1"
csv = "1"